gitops/apps/staging/backend-api/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-api
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app: backend-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
    - from:
        - podSelector:
            matchLabels:
              app: oms-rms
    - from:
        - podSelector:
            matchLabels:
              app: ui-terminal
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infra
      ports:
        - port: 5432
        - port: 5672
        - port: 9000
    - to:
        - podSelector:
            matchLabels:
              app: oms-rms
      ports:
        - port: 8082
    - ports:
        - port: 53
          protocol: UDP
        - port: 443
          protocol: TCP
